CICD.yml dosyasında cPanel'e dosya yükleme adımı "Incremental" olarak güncellendi ve durum dosyası eklendi.

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -12,10 +12,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Upload files to cPanel
+      - name: Upload files to cPanel (Incremental)
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /public_html/
+          state-name: .ftp-deploy-sync-state.json
+      
